@@ -92,9 +92,7 @@ class pkgUdevCdromDevices						/*{{{*/
    struct udev_enumerate *(*udev_enumerate_new) (struct udev *udev);
    struct udev_list_entry *(*udev_list_entry_get_next)(struct udev_list_entry *list_entry);
    const char* (*udev_device_get_property_value)(struct udev_device *udev_device, const char *key);
-#if 0 // FIXME: uncomment on next ABI break
    int (*udev_enumerate_add_match_sysattr)(struct udev_enumerate *udev_enumerate, const char *property, const char *value);
-#endif 
    // end libudev dlopen
    
  public:
@@ -104,11 +102,11 @@ class pkgUdevCdromDevices						/*{{{*/
    // try to open 
    bool Dlopen();
 
-   // this is the new interface
-   vector<CdromDevice> ScanForRemovable(bool CdromOnly);
-   // FIXME: compat with the old interface/API/ABI only
+   // convenience interface, this will just call ScanForRemovable
+   // with "APT::cdrom::CdromOnly"
    vector<CdromDevice> Scan();
 
+   vector<CdromDevice> ScanForRemovable(bool CdromOnly);
 };
 									/*}}}*/
 
