@@ -10,6 +10,8 @@ apt (0.8.16~exp4) UNRELEASED; urgency=low
   
   [ Michael Vogt ]
   * merged latest fixes from debian-sid
+  * apt-pkg/cdrom.{cc,h}:
+    - cleanup old ABI break avoidance hacks
 
  -- Julian Andres Klode <jak@debian.org>  Wed, 20 Jul 2011 16:23:55 +0200
 
